--- a/Assets/Develop/templates/manager.html
+++ b/Assets/Develop/templates/manager.html
@@ -1,13 +1,13 @@
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">{{ name }}</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ role }}</h3>
+        <h2 class="card-title">{{ this.name }}</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ this.role }}</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: {{ id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-            <li class="list-group-item">Office number: {{ officeNumber }}</li>
+            <li class="list-group-item">ID: {{ this.id }}</li>
+            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ this.email }}</a></li>
+            <li class="list-group-item">Office number: {{ this.officeNumber }}</li>
         </ul>
     </div>
 </div>
