--- a/Assets/Develop/templates/manager.html
+++ b/Assets/Develop/templates/manager.html
@@ -1,6 +1,6 @@
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">{{ this.name }}</h2>
+        <h2 class="card-title">{{ emp.name }}</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ this.role }}</h3>
     </div>
     <div class="card-body">
