--- a/Assets/Develop/templates/team.html
+++ b/Assets/Develop/templates/team.html
@@ -25,14 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">{{ emp.name }}</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ this.role }}</h3>
+        <h2 class="card-title">{{ name }}</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ role }}</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: {{ this.id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:jahoo@edu.com">{{ this.email }}</a></li>
-            <li class="list-group-item">Office number: {{ this.officeNumber }}</li>
+            <li class="list-group-item">ID: {{ id }}</li>
+            <li class="list-group-item">Email: <a href="mailto:jahoo@edu.com">{{ email }}</a></li>
+            <li class="list-group-item">Office number: {{ officeNumber }}</li>
         </ul>
     </div>
 </div>
